# termina

./: .envrc  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yml
benches/: parse.rs
docs/: windows-vt.md
examples/: colors.rs  detect-features.rs  event-read.rs  window-title.rs
src/: base64.rs  escape.rs  event.rs  input.rs  lib.rs  parse.rs  style.rs  terminal.rs
src/escape/: csi.rs  dcs.rs  osc.rs
src/event/: reader.rs  source.rs  stream.rs
src/event/source/: unix.rs  windows.rs
src/parse/: windows.rs
src/terminal/: unix.rs  windows.rs
