[package]
name = "termina"
version = "0.1.0"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
description = "A cross-platform VT manipulation library"
readme = "README.md"
repository = "https://github.com/helix-editor/termina"
edition = "2021"
license = "MIT OR MPL-2.0"
rust-version = "1.70"

[dependencies]
