[package]
name = "termina"
version = "0.1.0"
authors = ["Michael Davis <mcarsondavis@gmail.com>"]
description = "A cross-platform VT manipulation library"
readme = "README.md"
repository = "https://github.com/helix-editor/termina"
edition = "2021"
license = "MIT OR MPL-2.0"
rust-version = "1.70"

[dependencies]
parking_lot = "0.12"
bitflags = "2"

[target.'cfg(unix)'.dependencies]
rustix = { version = "1", default-features = false, features = ["std", "stdio", "termios", "event", "io_uring"] }
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", default-features = false, features = [] }
